Fix bullet alignment

--- a/assets/src/components/editor/quill.sequence.css
+++ b/assets/src/components/editor/quill.sequence.css
@@ -14,7 +14,7 @@
 }
 
 .ql-editor li > .ql-ui:before {
-  margin-right: 0.6em;
+  margin-right: 0.3em;
 }
 
 .ql-editor .ql-indent-1:not(.ql-direction-rtl) {
